# pigmora-wasm

./: Cargo.toml  build.sh
src/: lib.rs
src/document/: canvas.rs  element.rs  history.rs  layer.rs  mod.rs  transform.rs
src/elements/: image.rs  mod.rs  shape.rs  text.rs
src/renderer/: mod.rs  webgl.rs
