[package]
name = "pigmora-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.99"
js-sys = "0.3.80"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3.80"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "WebGlBuffer",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
]
